update website, fix bugs

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -7,6 +7,10 @@
     font-family: 'Montserrat', sans-serif;
   }
 
+  /* html {
+    @apply scroll-smooth;
+  } */
+
   :root {
     --background: 0 0% 100%;
     --foreground: 224 71.4% 4.1%;
