--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -68,7 +68,7 @@
 
 @layer components {
   .secondary-heading {
-    @apply text-4xl max-md:leading-[1.6] font-bold text-gray-300 max-md:text-3xl mb-10 leading-[1.7];
+    @apply text-4xl max-md:leading-[1.6] font-bold text-gray-300 max-md:text-3xl max-sm:text-2xl mb-10 leading-[1.7];
   }
 
   .primary-heading {
